added download buttons for fox, msnbc, and cnn coverage charts, need to include files and correct links after styling is complete.

--- a/tv_media.html
+++ b/tv_media.html
@@ -76,9 +76,11 @@
             </div>
             <div class="centered">
                 <a href="word_analysis.xlsx" download="word_analysis.xlsx">
-                <button class="dlbutton">Download Underlying Data</button>
+                    <button class="dlbutton">Download Underlying Data</button>
                 </a>
-                <a href="" id="downloadLink" download=""><button class="dlbutton" onclick="downloadChart()">Download Chart</button></a>
+                <a href="" id="downloadLink" download="">
+                    <button class="dlbutton" onclick="downloadChart()">Download Current Chart</button>
+                </a>
             </div>
 
             <hr>
@@ -95,20 +97,33 @@
                     <iframe title="MSNBC COVERAGE OF UKRAINE" aria-label="Interactive area chart" id="datawrapper-chart-dongo" src="https://datawrapper.dwcdn.net/dongo/1/" scrolling="yes" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="365" data-external="1"></iframe>
                     <script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
                     </script>
+                    <a href="msnbc_coverage.png" download="msnbc_coverage.png">
+                        <button class="dlbutton">Download Chart</button>
+                    </a>
                 </div>
+
+                <br><br><br>
 
                 <!-- chart 2 -->
                 <div class="iframe-container">
                     <iframe title="FOX NEWS COVERAGE OF UKRAINE" aria-label="Interactive area chart" id="datawrapper-chart-EON6G" src="https://datawrapper.dwcdn.net/EON6G/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="362" data-external="1"></iframe>
                     <script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
                     </script>
+                    <a href="fox_coverage.png" download="fox_coverage.png">
+                        <button class="dlbutton">Download Chart</button>
+                    </a>
                 </div>
+
+                <br><br><br>
 
                 <!-- chart 3 -->
                 <div class="iframe-container">
                     <iframe title="CNN COVERAGE OF UKRAINE" aria-label="Interactive area chart" id="datawrapper-chart-4KBpv" src="https://datawrapper.dwcdn.net/4KBpv/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="391" data-external="1"></iframe>
                     <script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
                     </script>
+                    <a href="cnn_coverage.png" download="cnn_coverage.png">
+                        <button class="dlbutton">Download Chart</button>
+                    </a>
                 </div>
             </div>
         </div>
