--- a/regional_media.html
+++ b/regional_media.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Regional Media</title>
-        <link href="styles.css" rel="stylesheet" />
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-    </head>
+<head>
+    <title>Regional Media</title>
+    <link href="styles.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+</head>
+<body>
+    <!-- navigation buttons -->
+    <a href="index.html" class="button-link-inactive">Home</a>
+    <a href="tv_media.html" class="button-link-inactive">Television Media</a>
+    <a href="national_press.html" class="button-link-inactive">National Press</a>
+    <a href="regional_media.html" class="button-link-active">Regional Media</a>
+    <a href="our-team/index.html" class="button-link-inactive">Our Team</a>
+    <h1>Regional Media</h1>
 
-<!-- navigation buttons -->
-    <body>
-        <a href="index.html", class="button-link-inactive">Home</a>
-        <a href="tv_media.html", class="button-link-inactive">Telivision Media</a>
-        <a href="national_press.html", class="button-link-inactive">National Press</a>
-        <a href="regional_media.html", class="button-link-active">Regional Media</a>
-        <a href="our-team/index.html", class="button-link-inactive">Our Team</a>
-        <h1>Regional Media</h1>
+    <!-- state and local press -->
+    <div class="centered">
+        <p>While the war in Ukraine is not covered as heavily in local media, we also wanted to discover whether there were trends in how the war is portrayed across different geographic regions within the United States. Below is a chart depicting the level of coverage by media outlets in the top 10 most populated states.</p>
 
- <!--state and local press -->
-        <div class="centered">
-            <p>While the war in Ukraine is not covered as heavily in local media, we also wanted to discover whether there were trends in how the war is portrayed across different geographic regions within the United States. Below is a chart depicting the level of coverage by media outlets in the top 10 most populated states.</p>
+        <br><br><br>
 
-            <br><br><br>
-
-            <iframe title="Mentions of Ukraine across Top 10 Populated States" aria-label="Datawrapper visualization" src="https://datawrapper.dwcdn.net/NQAu8/" scrolling="no" frameborder="0" height="400" style="width: 0; min-width: 100%; border: none; height: 500px;"></iframe>
-        </div>
-    </body>
+        <!-- mape of the United States -->
+        <div style="min-height:550px"><script type="text/javascript" defer src="https://datawrapper.dwcdn.net/ot8aE/embed.js?v=2" charset="utf-8"></script><noscript><img src="https://datawrapper.dwcdn.net/ot8aE/full.png" alt="" /></noscript></div>
+    </div>
+</body>
 </html>
