finalized title for tv media page

--- a/tv_media.html
+++ b/tv_media.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>TV Media</title>
+        <title>Television Media</title>
         <link href="styles.css" rel="stylesheet" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,12 +16,10 @@
         <a href="national_press.html", class="button-link-inactive">National Press</a>
         <a href="regional_media.html", class="button-link-inactive">Regional Media</a>
         <a href="our-team/index.html", class="button-link-inactive">Our Team</a>
-        <h1>Television Media</h1>
+        <h1>American Network Television Media</h1>
     </div>
     <!-- national tv section -->
         <div class="centered">
-            <h2 class="centered">American Network Television Media</h2>
-
             <p class="centered">The table below demonstrates how often each of the three main network news agencies used a specific word (left column) within three minutes of using the word "Ukraine" compared to the average of all three agencies. A high value indicates a network used the selected word more in comparison to the other networks, while a lower value indcates a network used the selected word less in comparison to the other networks. Each value represents how many standard deviations each networks value is from the average of all three networks. All data is cumulative by year.</p>
 
             <br><br>
