added template for key takeaways

--- a/regional_media.html
+++ b/regional_media.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Regional Media</title>
-    <link href="styles.css" rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-</head>
-<body>
+    <head>
+        <title>National Press</title>
+        <link href="styles.css" rel="stylesheet" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    </head>
+
     <!-- navigation buttons -->
+<body>
+    <div class="nav">
     <a href="index.html" class="button-link-inactive">Home</a>
     <a href="tv_media.html" class="button-link-inactive">Television Media</a>
     <a href="national_press.html" class="button-link-inactive">National Press</a>
@@ -18,12 +20,20 @@
 
     <!-- state and local press -->
     <div class="centered">
-        <p>While the war in Ukraine is not covered as heavily in local media, we also wanted to discover whether there were trends in how the war is portrayed across different geographic regions within the United States. Below is a chart depicting the level of coverage by media outlets in the top 10 most populated states.</p>
+        <p>While the war in Ukraine is not covered as heavily in local media, we also wanted to discover whether there were trends in how the war is portrayed across different geographic regions within the United States.</p>
 
-        <br><br><br>
+        <br>
 
-        <!-- mape of the United States -->
+        <!-- map of the United States -->
         <div style="min-height:550px"><script type="text/javascript" defer src="https://datawrapper.dwcdn.net/ot8aE/embed.js?v=2" charset="utf-8"></script><noscript><img src="https://datawrapper.dwcdn.net/ot8aE/full.png" alt="" /></noscript></div>
+
+        <h5>Key Takeaways</h5>
+
+        <ul>
+            <li>Item 1</li>
+            <li>Item 2</li>
+            <li>Item 3</li>
+        </ul>
     </div>
 </body>
 </html>
