added 3 major take aways

--- a/regional_media.html
+++ b/regional_media.html
@@ -20,7 +20,7 @@
 
     <!-- state and local press -->
     <div class="centered">
-        <p>While the war in Ukraine is not covered as heavily in local media, we also wanted to discover whether there were trends in how the war is portrayed across different geographic regions within the United States.</p>
+        <p>While the war in Ukraine is not covered as heavily in local media, we also wanted to investigate whether there were trends in how the war is portrayed across different geographic regions within the United States.</p>
 
         <br>
 
@@ -30,9 +30,11 @@
         <h5>Key Takeaways</h5>
 
         <ul>
-            <li>Item 1</li>
-            <li>Item 2</li>
-            <li>Item 3</li>
+            <li>Senators from Indiana, Wisconsin, and Idaho are possibly contributing to the high percent of mentions in those states. The Senators have all raised concerns about further providing aid to Ukraine. For example, in a <a href="https://www.wpr.org/morning-show-senator-ron-johnson-aid-israel-ukraine-separate-bills">October 2023 interview</a>, Senator Ron Johnson of Wisconsin warned against "massive, ill-defined" aid packages to Israel and Ukraine in a single bill.</li>
+            <br>
+            <li>The high percent of mentions in Iowa and New Hampshire likely overlaps with the US presidential election, as Iowa is the first to caucus and New Hampshire is the first primary state. Ukraine is probably one of the things presidential candidates campaign in the states are talking about.</li>
+            <br>
+            <li>Kentucky, Virginia, and West Virginia, and Maryland are all states that have senators who have been central in discussions for providing further aid to Ukraine because they either hold important leadership or committee positions. For instance, Senator Ben Cardin of Maryland is chair of the Senate Foreign Relations Committee. It is probably why there is such a higher percent of mentions in those states.</li>
         </ul>
     </div>
 </body>
