fixed small formatting issues

--- a/national_press.html
+++ b/national_press.html
@@ -37,9 +37,9 @@
             
             <br>
 
-            <li style="line-height: 2">In 2023, both sets of media sources published roughly the same proportional amount of content referencing "Ukraine" with media sources most often tweeted by Republican voters publishing approximately 6% more than media sources most often tweeted by Democrat voters.</li>
+            <li class="centered" style="line-height: 2">In 2023, both sets of media sources published roughly the same proportional amount of content referencing "Ukraine" with media sources most often tweeted by Republican voters publishing approximately 6% more than media sources most often tweeted by Democrat voters.</li>
             <br>
-            <li style="line-height: 2">In 2023, media sources most often tweeted by Republican voters published approximately 11% more content about Ukraine including close mentions of "corrupt" or "corruption" than media sources most often tweeted by Democrat voters. </li>
+            <li class="centered" style="line-height: 2">In 2023, media sources most often tweeted by Republican voters published approximately 11% more content about Ukraine including close mentions of "corrupt" or "corruption" than media sources most often tweeted by Democrat voters. </li>
 
             <br><br>
 
