--- a/tv_media.html
+++ b/tv_media.html
@@ -22,15 +22,15 @@
     <!-- national tv section -->
         <div class="centered">
 
-            <p class="centered">While most major network television new sources have covered the war in Ukraine, not all coverage is the same. Different stations have different agendas and their coverage of events is colored by these biases. The table below analyzes the coverage of Ukraine by the three main network television sources by examining their relative use of seleted words included in their coverage of Ukraine.</p>
+            <p class="centered">While most major network television news sources have covered the war in Ukraine, not all coverage has been the same. Different stations have different agendas and their coverage of events is colored by these biases. The table below analyzes the coverage of Ukraine by the three main network television sources: CNN, Fox, and MSNBC. The table examines their relative use of selected words included in their coverage of Ukraine.</p>
 
             <br>
 
-            <p class="centered">To examine this, we developed a list of words that might signal the tone or context of a given story on Ukraine (left column). We then gathered data totaling how many times each station included this word within 3 minutes of using the word "Ukraine". Using these totals, we determined the average useage of each word across all three stations by year and the standard deviation of the three values. Standard deviation is a common statistical measure of the spread of values in a given set of values, think: the average distance of each value in a set from the average. The values depicted in the table below indicate each stations distance, measured in standard deviation, away from the average of all three, also known as a z-score.</p>
+            <p class="centered">To explore this, we developed a list of words that might signal the tone or context of a given story on Ukraine (left column). We then gathered data totaling how many times each station included this word within 3 minutes of using the word "Ukraine." Using these totals, we determined the average useage of each word across all three stations by year and the standard deviation of the three values. Standard deviation is a common statistical measure of the spread of a set of values relative to their average. The values depicted below indicate the distance, measured in standard deviation, each station is away from the average of all three, also known as a z-score.</p>
 
             <br>
 
-            <p class="centered"> <strong>Put simply, extreme values (more than 1 or less than -1) indicate a station used this word much more frequently or much less frequently than the average of all three stations.</strong> Higher values mean a network used a word more frequently in association with the word "Ukraine" than the average across the three networks. All data is cumulative by year. To examine the underlying data, download the excel below.</p>
+            <p class="centered">Put simply, extreme values (more than 1 or less than -1) indicate a station used this word much more frequently or much less frequently than the average of all three stations. Higher values mean a network used a word more frequently in association with the word "Ukraine" than the average across the three networks. All data is cumulative by year. To examine the underlying data, click the download button below.</p>
 
             <br><br>
 
