spellchecked How to use this chart

--- a/national_press.html
+++ b/national_press.html
@@ -45,11 +45,11 @@
 
             <div class="boxed">
                 <h3>How to Interpret These Charts</h3>
-                <li>The top chart measures useage of "Ukraine". The bottom chart measures useage of "corrupt" or "corruption" in stories that use "Ukraine".</li>
-                <li>The chart plots the share of stories referencing "Ukraine" from each group against eachother.</li>
-                <li>The 50% line down the middle indicates an even split between the two groups - therefore if red is above the line it indicates that group has a higher share of stories reagarding Ukraine on that day compared to blue.</li>
-                <li>If the graph were to be split with half red and half blue, it would indicate each group published the same relative share of stories regarding Ukraine on that day.</li>
-                <li>The graph does not measure absolute values only relative. Therefore, if both groups published 3% of their stories about Ukraine on a given day, this would read as a 50/50 split. If both groups published 10% of their stories about Ukraine on a given day, this would also read as a 50/50 split.</li>
+                <li>The top chart measures frequency of usage of "Ukraine". The bottom chart measures frequency of usage of "corrupt" or "corruption" in stories that use "Ukraine".</li>
+                <li>The chart plots the share of stories referencing "Ukraine" from each group against each other.</li>
+                <li>The 50% line down the middle indicates an even split between the two groups. Therefore, if red is above the line, it indicates that group has a higher share of stories regarding Ukraine on that day compared to blue.</li>
+                <li>If the graph were to be split with half red and half blue, it would indicate that each group published the same relative share of stories regarding Ukraine on that day.</li>
+                <li>The graph does not measure absolute values, only relative ones. Therefore, if both groups published 3% of their stories about Ukraine on a given day, this would read as a 50/50 split. If both groups published 10% of their stories about Ukraine on a given day, this would also read as a 50/50 split.</li>
             </div>
 
             <br><br>
