updated feedback form

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>How the War in Ukraine is Portrayed in U.S. media</title>
+        <title>Home Page</title>
         <link href="styles.css" rel="stylesheet"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +27,7 @@
 
         <!-- introduction to research -->
         <div class="centered">
-            <p>On February 24, 2022, Russia launched a full-scale invasion of Ukraine. In response, many NATO member nations, including the United States, have sent financial, humanitarian, and military aid to Ukraine to support their efforts. As the war has played out, providing this aid has become a political football in the United States with the latest relief legislation failing in Congress in December 2023 after being panned by Republican Members of Congress. As support for providing aid to Ukraine begins to show cracks along ideological lines, we aim to investigate how the war in Ukraine is portrayed by media outlets across the political spectrum and how these may contribute to this development.</p>
+            <p>On February 24, 2022, Russia launched a full-scale invasion of Ukraine. In response, many NATO member nations, including the United States, have sent financial, humanitarian, and military aid to Ukraine to support their war efforts. As the war has played out, providing this aid has become a political football in the United States with the latest relief legislation failing in Congress in December 2023 after being panned by Republican members of Congress. As support for providing aid to Ukraine begins to show cracks along ideological lines, we aim to investigate how the war in Ukraine is portrayed by media outlets across the political spectrum and how these may contribute to this development.</p>
         </div>
 
         <hr> 
@@ -35,7 +35,7 @@
         <!--how to cite our research -->
         <h2 class="centered">Cite This Project</h2>
 
-        <p class="centered">If you would like to cite any of this project, please feel free to use any of the premade citations below.</p>
+        <p class="centered">If you would like to cite any portion of this project, please feel free to use any of the premade citations below.</p>
 
         <br>
 
@@ -69,9 +69,9 @@
 <hr>
 
 <!-- feedback form -->
-        <div class="centered-clipped">
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfRWK-xJhCgE0AuhEanhjCo-SY2LvBo8aUzPg1v4YfPKf88Rw/viewform?embedded=true" scrolling="no" style="width: 0; min-width: 100%; border: none; height: 600px;" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-        </div>
+<div class="centered-clipped">
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdnkRcI6fMex_HDP-S0eekyg7nlY8lJq8r88n32z323OA8Dpw/viewform?embedded=true" scrolling="no" width="640" height="656" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+</div>
         <hr>
     </body>
 </html>
