fixed formatting issues

--- a/tv_media.html
+++ b/tv_media.html
@@ -22,8 +22,6 @@
     <!-- national tv section -->
         <div class="centered">
 
-          <h2 class="centered">American Network Television Media</h2>
-
             <p class="centered">While most major network television new sources have covered the war in Ukraine, not all coverage is the same. Different stations have different agendas and their coverage of events is colored by these biases. The table below analyzes the coverage of Ukraine by the three main network television sources by examining their relative use of seleted words included in their coverage of Ukraine.</p>
 
             <br>
@@ -32,7 +30,7 @@
 
             <br>
 
-            <p class="centered"> <strong>Put simply, extreme values (more than 1 or less than -1) indicate a station used this word much more frequently or much less frequently than the average of all three stations.</strong> Higher values mean a network used a word more frequently in association with the word "Ukraine" than the average across the three networks. All data is cumulative by year. To examine the underlying data, download the excel below.</p>
+            <p class="centered"> <strong>Put simply, extreme values (less than -1 or more than 1) indicate a station used this word much more frequently or much less frequently than the average of all three stations.</strong> Higher values mean a network used a word more frequently in association with the word "Ukraine" than the average across the three networks. All data is cumulative by year. To examine the underlying data, download the excel below.</p>
 
             <br><br>
 
