--- a/tv_media.html
+++ b/tv_media.html
@@ -7,6 +7,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
         <script src="main.js" defer></script>
+        <link rel="icon" type="image/png" href="../Ukraine-flag-icon-on-transparent-background-PNG.png">
     </head>
 
 <!-- navigation buttons -->
