centered box and charts

--- a/national_press.html
+++ b/national_press.html
@@ -44,7 +44,7 @@
 
             <br><br>
 
-            <div class="boxed">
+            <div class="boxed centered">
                 <h3>How to Interpret These Charts</h3>
                 <li>The top chart measures frequency of usage of "Ukraine". The bottom chart measures frequency of usage of "corrupt" or "corruption" in stories that use "Ukraine".</li>
                 <li>The chart plots the share of stories referencing "Ukraine" from each group against each other.</li>
@@ -55,7 +55,7 @@
 
             <br><br>
 
-            <div class="iframe-double-container">
+            <div class="iframe-double-container centered">
                 <iframe title="PERCENT OF COVERAGE DEDICATED TO UKRAINE BY MEDIA SOURCE" aria-label="Interactive area chart" id="datawrapper-chart-Lri3F" src="https://datawrapper.dwcdn.net/Lri3F/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="363" data-external="1"></iframe>
                 <script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
                 </script>
