added the wordclouds and mapped out places for the how to use and the key takeaways

--- a/national_press.html
+++ b/national_press.html
@@ -76,14 +76,41 @@
                 </div>
             </div>
 
-            <br><hr><br>
+            <br> <br> <br> 
 
-            <div class="centered">
-                <img src="test-wordcloud.png" alt="2023 national media wordcloud">
-                <a href="test-wordcloud.png" download="test-wordcloud">
-                <button class="dlbutton">Download Image</button></a>
-                <button class="dlbutton">Download Underlying Data</button>
+            <h3 class="centered" style="color:black">Key Takeaways</h3>
+
+            <br>
+            <li class="centered" style="line-height: 2">In 2023, both sets of media sources published roughly the same proportional amount of content referencing "Ukraine" with media sources most often tweeted by Republican voters publishing approximately 6% more than media sources most often tweeted by Democrat voters.</li>
+            <br>
+            <li class="centered" style="line-height: 2">In 2023, media sources most often tweeted by Republican voters published approximately 11% more content about Ukraine including close mentions of "corrupt" or "corruption" than media sources most often tweeted by Democrat voters. </li>
+
+            <br><br>
+
+            <div class="boxed">
+                <h3>How to interpret these Word Clouds</h3>
+                <li>First, select the year from which you would like to view data.</li>
+                <li>The chart will display each network's relative useage for each word.</li>
+                <li>You can sort the chart for each network's values by clicking on the network name at the top of each column.</li>
+                <li>By clicking on the column header, you will sort the values for that column in either ascending or descending order on alternate clicks indicated by a small arrow to the left of each network name.</li>
+                <li>Red highlighted cells represent a higher value while blue highlighted cells represent a lower value.</li>
             </div>
+
+           <div class="centered">
+            <div style="display: flex; justify-content: space-between;">
+                <img src="fox_1year.png" alt="Fox 1-Year Wordcloud" style="width: 60%;">
+                <img src="cnn_1year.png" alt="CNN 1-Year Wordcloud" style="width: 60%;">
+            </div>
+                <a href="fox_1year.png" download="fox_1year">
+                    <button class="dlbutton">Download Fox Image</button>
+                </a>
+                <a href="cnn_1year.png" download="cnn_1year">
+                    <button class="dlbutton">Download CNN Image</button>
+                </a>
+                <button class="dlbutton">Download Underlying Data</button>
+    
+            </div>
+
         </div> 
         <hr>
     </body>
