--- a/national_press.html
+++ b/national_press.html
@@ -89,27 +89,30 @@
 
             <div class="boxed">
                 <h3>How to interpret these Word Clouds</h3>
-                <li>First, select the year from which you would like to view data.</li>
-                <li>The chart will display each network's relative useage for each word.</li>
+                <li>The word clouds below visualize the frequency of use for each word mentioned within a three-minute timeframe of the term "Ukraine being mentioned"</li>
+                <li>The frequency of use is illustrated by the size: the bigger a particular term - the more freqnently it was used in conjunction with the term "Ukraine</li>
                 <li>You can sort the chart for each network's values by clicking on the network name at the top of each column.</li>
                 <li>By clicking on the column header, you will sort the values for that column in either ascending or descending order on alternate clicks indicated by a small arrow to the left of each network name.</li>
                 <li>Red highlighted cells represent a higher value while blue highlighted cells represent a lower value.</li>
             </div>
 
-           <div class="centered">
-            <div style="display: flex; justify-content: space-between;">
-                <img src="fox_1year.png" alt="Fox 1-Year Wordcloud" style="width: 60%;">
-                <img src="cnn_1year.png" alt="CNN 1-Year Wordcloud" style="width: 60%;">
-            </div>
+               <div class="centered">
+                <div style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: center; align-items: center;">
+                    <img src="fox_1year.png" alt="Fox 1-Year Wordcloud" style="max-width: 45%; height: auto;">
+                    <img src="cnn_1year.png" alt="CNN 1-Year Wordcloud" style="max-width: 45%; height: auto;">
+                </div>
+        
+                <div style="display: flex; gap: 20px; justify-content: center; margin-top: 20px;">
                 <a href="fox_1year.png" download="fox_1year">
                     <button class="dlbutton">Download Fox Image</button>
                 </a>
                 <a href="cnn_1year.png" download="cnn_1year">
                     <button class="dlbutton">Download CNN Image</button>
                 </a>
-                <button class="dlbutton">Download Underlying Data</button>
-    
+                    <button class="dlbutton">Download Underlying Data</button>
             </div>
+</div>
+
 
         </div> 
         <hr>
