--- a/national_press.html
+++ b/national_press.html
@@ -76,7 +76,20 @@
                 </div>
             </div>
 
-            <br> <br> <br> 
+
+            <br><br>
+
+            <div class="boxed">
+                <h3>How to interpret the Word Clouds below</h3>
+                <li>The word clouds below visualize the frequency of use for each word mentioned within a three-minute timeframe of the term "Ukraine" being mentioned</li>
+                <li>The visualization is based on the data collected over the year 2023 for the two major US-based TV networks: FoxNews and CNN</li>
+                <li>The frequency of use is depicted by the size: the bigger a particular term in the cloud - the more freqnently it was used in conjunction with the term "Ukraine"</li>
+                <li>Similarly, the smaller a particular term in the cloud - the less freqnently it was used in conjunction with the term "Ukraine"</li>
+
+            </div>
+
+
+            <br> <br>
 
             <h3 class="centered" style="color:black">Key Takeaways</h3>
 
@@ -85,16 +98,7 @@
             <br>
             <li class="centered" style="line-height: 2">In 2023, media sources most often tweeted by Republican voters published approximately 11% more content about Ukraine including close mentions of "corrupt" or "corruption" than media sources most often tweeted by Democrat voters. </li>
 
-            <br><br>
-
-            <div class="boxed">
-                <h3>How to interpret these Word Clouds</h3>
-                <li>The word clouds below visualize the frequency of use for each word mentioned within a three-minute timeframe of the term "Ukraine being mentioned"</li>
-                <li>The frequency of use is illustrated by the size: the bigger a particular term - the more freqnently it was used in conjunction with the term "Ukraine</li>
-                <li>You can sort the chart for each network's values by clicking on the network name at the top of each column.</li>
-                <li>By clicking on the column header, you will sort the values for that column in either ascending or descending order on alternate clicks indicated by a small arrow to the left of each network name.</li>
-                <li>Red highlighted cells represent a higher value while blue highlighted cells represent a lower value.</li>
-            </div>
+            <br> <br>
 
                <div class="centered">
                 <div style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: center; align-items: center;">
