added key takeaways analysis

--- a/national_press.html
+++ b/national_press.html
@@ -88,17 +88,17 @@
 
             </div>
 
-
-            <br> <br>
+            <br><br>
 
             <h3 class="centered" style="color:black">Key Takeaways</h3>
 
             <br>
-            <li class="centered" style="line-height: 2">In 2023, both sets of media sources published roughly the same proportional amount of content referencing "Ukraine" with media sources most often tweeted by Republican voters publishing approximately 6% more than media sources most often tweeted by Democrat voters.</li>
+            <li class="centered" style="line-height: 2">In 2023, both FoxNews and CNN used the terms "Biden" and "Russia" with similar frequency.</li>
             <br>
-            <li class="centered" style="line-height: 2">In 2023, media sources most often tweeted by Republican voters published approximately 11% more content about Ukraine including close mentions of "corrupt" or "corruption" than media sources most often tweeted by Democrat voters. </li>
+            <li class="centered" style="line-height: 2">FoxNews frequently covered Ukraine in conjunction with Israel. It often brough border protection issues into the discussion surrounding Ukraine, as well as Hunter Biden, military, and security. This news source also covered Russia's nuclear threats a lot more extensively than CNN.</li>
+            <br>
+            <li class="centered" style="line-height: 2">Unlike FoxNews, CNN didn't shy away from the term "war" and mentioned Putin a lot more frequently. It tended to cover Ukraine in conjunction with Israel less often, focusing more on Wagner group and China.</li>
 
-            <br> <br>
 
                <div class="centered">
                 <div style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: center; align-items: center;">
